--- a/chat/templates/chat/home.html
+++ b/chat/templates/chat/home.html
@@ -5,9 +5,10 @@
     <title>Chat Home</title>
 </head>
 <body>
-    <h2>Welcome to the Chat</h2>
+    <h1>Welcome to the Chat</h1>
     <p>Hello, {{ user.username }}!</p>
-    <a href="{% url 'logout' %}">Logout</a>
+    <a href="{% url 'logout' %}">Logout</a> |
+    <a href="{% url 'edit_profile' %}">Edit Profile</a>
 
     <h3>Available Group Chats</h3>
     <ul>
